--- a/src/components/PjSection/PjSection.module.css
+++ b/src/components/PjSection/PjSection.module.css
@@ -135,3 +135,22 @@
         padding: 40px 0;
     }
 }
+
+.exploreButton {
+    background-color: #f1f3f4;
+    color: #202124;
+    height: 48px;
+    padding: 0 24px;
+    border-radius: 24px;
+    font-size: 14px;
+    font-weight: 500;
+    transition: background-color 0.2s;
+    border: none;
+    cursor: pointer;
+    margin-top: 24px;
+    width: fit-content;
+}
+
+.exploreButton:hover {
+    background-color: #e8eaed;
+}
