--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -112,7 +112,7 @@
 
     50% {
         transform: translateY(-20px) rotate(5deg);
-        color: #5F6CE2;
+        color: #ff9797;
         /* A nice purple/blue accent */
         text-shadow: 0 10px 30px rgba(95, 108, 226, 0.4);
     }
