--- a/src/pages/ProjectPage/ProjectPage.module.css
+++ b/src/pages/ProjectPage/ProjectPage.module.css
@@ -1,7 +1,7 @@
 .page {
     width: 100%;
     min-height: 100vh;
-    padding-top: 80px;
+    padding-top: 0;
     background-color: #ffffff;
     color: #202124;
     display: flex;
