--- a/src/components/SpotifySection/SpotifySection.module.css
+++ b/src/components/SpotifySection/SpotifySection.module.css
@@ -58,6 +58,19 @@
 .embedContainer {
     flex: 1;
     min-width: 350px;
+    position: relative;
+    /* Needed for overlay absolute positioning */
+}
+
+.overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 10;
+    cursor: pointer;
+    /* Transparent by default, but captures clicks/scrolls */
 }
 
 /* Right Column */
