--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -23,8 +23,7 @@
     flex: 1;
     max-width: 600px;
     text-align: left;
-    /* Changed from center to left */
-    animation: fadeIn 0.8s ease-out forwards;
+    height: 100%;
 }
 
 .rightColumn {
@@ -32,7 +31,6 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    animation: fadeIn 1s ease-out forwards;
 }
 
 .logoWrapper {
